k8s/mysql-external.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.cxmyh5xboy0b.eu-central-1.rds.amazonaws.com
  #end point of your db
